--- a/src/app/quotes-form/quotes-form.component.html
+++ b/src/app/quotes-form/quotes-form.component.html
@@ -1,1 +1,37 @@
-<p>quotes-form works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-3">
+            <form (ngSubmit)='submitQoute()' #qouteForm='ngForm'>
+                <h2>Add your qoute</h2>
+                <div class="form-group">
+                  <label for="name">Your Name</label>
+                  <input type="text" required class="form-control" id="name" [(ngModel)]="newQoute.name" name="name" #name='ngModel' placeholder="Name" >
+
+                  <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+                    <p>Name is required</p>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label for="title">Qoute Title</label>
+                  <input type="text" required class="form-control" id="title" [(ngModel)]="newQoute.title" name="title" placeholder="Title" #title='ngModel'>
+                  
+                  <div [hidden]="title.valid || name.pristine" class="alert alert-danger">
+                    <p>Title is required</p>
+                  </div>
+                </div>
+                <div class="md-form">
+                    <label for="qoute">Qoute</label>
+                    <textarea type="text" id="quote"  [(ngModel)]="newQoute.quote" name="quote" rows="2" class="form-control md-textarea" placeholder="Qoute" #quote='ngModel' required></textarea>
+                    <div [hidden]="quote.valid || name.pristine" class="alert alert-danger">
+                        <p>You need to add a qoute </p>
+                      </div>
+                </div>
+                <div class="form-group">
+                    <label for="author">Author</label>
+                    <input type="text" class="form-control" id="" placeholder="Author">
+                  </div>
+                  <button type="submit" class="btn btn-sm btn-success">Add Quote</button>
+            </form>
+        </div>
+    </div>
+</div>
