--- a/src/app/quote-detailes/quote-detailes.component.html
+++ b/src/app/quote-detailes/quote-detailes.component.html
@@ -1,1 +1,7 @@
-<p>quote-detailes works!</p>
+<p>This is a quote by {{ quote.name }}</p>
+<button class="btn btn-success btnspace" (click)='like()' type="button" name="button">
+    <span class="fa fa-thumbs-up"></span> Likes: {{likes}} </button>
+
+<button class="btn btn-danger btnspace" (click)='hate()' type="button" name="button" style="margin-left:2.5em">
+    <span class="fa fa-thumbs-down"></span> Dislikes: {{dislikes}}</button>
+<button class="btn btn-danger" (click)='quoteComplete(true)'> Delete </button>
