--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -7,19 +7,22 @@
 }
 .col-md-6 ul li{
     border: 2px solid black;
-    margin: 5%;
+    width: 60%;
+    margin: 1%;
     list-style: none;
-    display: inline;
-    padding: 10px;
-    
+    padding: 1%;
 }
 
-.jumbotron{
-    height: 200%;
+.col-md-6 ul{
+    width:300%;
+}
+
+
+.jumbotron-fluid{
     display: flex;
 }
 #detailes-button{
-    margin-left: 60%;
+    margin-left: 90%;
     font-size: small;
 }
 #quotes{
