--- a/src/app/quotes-form/quotes-form.component.html
+++ b/src/app/quotes-form/quotes-form.component.html
@@ -2,10 +2,10 @@
     <div class="row">
         <div class="col-sm-3">
             <form (ngSubmit)='submitQuote()' #quoteForm='ngForm'>
-                <h2>Add your qoute</h2>
+                <h2>Add Qoute</h2>
                 <div class="form-group">
                   <label for="name">Your Name</label>
-                  <input type="text" required class="form-control" id="name" [(ngModel)]="newQuote.name" name="name" #name='ngModel' placeholder="Name" >
+                  <input type="text"class="form-control" id="name" [(ngModel)]="newQuote.name" name="name" #name='ngModel' placeholder="Name" >
 
                   <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
                     <p>Name is required</p>
@@ -13,7 +13,7 @@
                 </div>
                 <div class="form-group">
                   <label for="title">Qoute Title</label>
-                  <input type="text" required class="form-control" id="title" [(ngModel)]="newQuote.title" name="title" placeholder="Title" #title='ngModel'>
+                  <input type="text" class="form-control" id="title" [(ngModel)]="newQuote.title" name="title" placeholder="Title" #title='ngModel'>
                   
                   <div [hidden]="title.valid || name.pristine" class="alert alert-danger">
                     <p>Title is required</p>
@@ -21,7 +21,7 @@
                 </div>
                 <div class="md-form">
                     <label for="qoute">Qoute</label>
-                    <textarea type="text" id="description"  [(ngModel)]="newQuote.description" name="quote" rows="2" class="form-control md-textarea" placeholder="Qoute" #description='ngModel' required></textarea>
+                    <textarea type="text" id="description"  [(ngModel)]="newQuote.description" name="quote" rows="2" class="form-control md-textarea" placeholder="Qoute" #description='ngModel'></textarea>
                     <div [hidden]="description.valid || name.pristine" class="alert alert-danger">
                         <p>You need to add a qoute </p>
                       </div>
@@ -29,7 +29,7 @@
                 <div class="form-group">
                     <label for="author">Author</label>
                     <input type="text" class="form-control" id="" placeholder="Author">
-                  </div> <br> <br>
+                  </div> <br>
                   <div class="form-group">
                     <label for="publishDate">Publish Date</label>
                     <input type='date' id="complete" required name="date" [(ngModel)]=newQuote.publishDate #publishDate="ngModel">
