--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -1,3 +1,9 @@
+h1{
+    color: greenyellow;
+    background-color:rgba(0, 0, 0, 0.534);
+    font-weight: 800;
+}
+
 .card{
     width: 100%;
     background-color:aquamarine;
@@ -20,6 +26,9 @@
 
 .jumbotron-fluid{
     display: flex;
+    overflow: hidden;
+    background-image: url("src/assets/mind.jpeg");
+
 }
 #detailes-button{
     margin-left: 90%;
