--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,10 +1,10 @@
-<!-- <div class="container"> -->
+<h1>Welcome to Life Quotes</h1>
     <div class="jumbotron-fluid">
         <app-quotes-form (addQuote)="addNewQuote($event)"></app-quotes-form>
         <div class="card">
             <div class="card-body">
                 <div class="col-md-6">
-                    <h1>Featured Quotes</h1><br>
+                    <h2>Featured Quotes</h2><br>
                     <ul>
                         <div *ngFor='let quote of quotes;let i = index' id="quotes">
                             <li id="{{i}}">{{quote.title}} <br>
