--- a/src/app/quotes-form/quotes-form.component.html
+++ b/src/app/quotes-form/quotes-form.component.html
@@ -30,11 +30,11 @@
                     <label for="author">Author</label>
                     <input type="text" class="form-control" id="" placeholder="Author">
                   </div> <br>
-                  <div class="form-group">
-                    <label for="publishDate">Publish Date</label>
-                    <input type='date' id="complete" required name="date" [(ngModel)]=newQuote.publishDate #publishDate="ngModel">
+                  <!-- <div class="form-group">
+                    <label for="publish">Publish Date</label>
+                    <input type='date' id="complete" required name="date" [(ngModel)]=newQuote.datePosted #publishDate="ngModel">
           
-                  </div>
+                  </div> -->
                   <button type="submit" class="btn btn-sm btn-success">Add Quote</button>
             </form>
         </div>
