--- a/src/app/quote-detailes/quote-detailes.component.html
+++ b/src/app/quote-detailes/quote-detailes.component.html
@@ -1,4 +1,4 @@
-<p>Published by: {{ quote.name}}  <br>Posted: {{quote.datePosted|dateCount}} days ago.</p>
+<p>Posted: {{quote.datePosted|dateCount}} days ago <br> by: {{ quote.name}} </p>
 <button class="btn btn-success btnspace" (click)='like()' type="button" name="button" id="like">
     <span class="fa fa-thumbs-up"></span> Likes: {{likes}} </button>
 
