Change app Title

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,3 @@
-@import "~bootstrap/dist/css/bootstrap.css"
+@import "~bootstrap/dist/css/bootstrap.css";
+@import url("https://fonts.googleapis.com/css2?family=Fugaz+One&family=Merienda&family=Playball&display=swap");
+
