Change font color of quotes

--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -9,6 +9,11 @@ h1{
     
 }
 
+li{
+    color: rgb(255, 0, 0);
+    font-weight: 900;
+}
+
 .card{
     width: 100%;
     background-color:aquamarine;
