--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,4 +1,4 @@
-
+<link href="https://fonts.googleapis.com/css2?family=Fugaz+One&family=Merienda&family=Playball&display=swap" rel="stylesheet">
 
 
 <h1>Welcome to Life Quotes</h1>
@@ -10,7 +10,7 @@
                     <h2>Featured Quotes</h2><br>
                     <ul>
                         <div *ngFor='let quote of quotes;let i = index' id="quotes">
-                            <li id="{{i}}">{{quote.title}} <br>
+                            <li id="{{i}}"> <em>{{quote.title}}</em> <br>
                                 <button class="btn btn-success" (click)='toggleDetails(i)' id="detailes-button">Details</button> <br>
                                  {{quote.description}}
                             <app-quote-detailes *ngIf="quote.showDescription" [quote]='quote' (isComplete)='completeQuote($event,i)'>
